--- a/frontend/Shared/NavMenu.razor
+++ b/frontend/Shared/NavMenu.razor
@@ -15,11 +15,6 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
@@ -27,6 +22,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="todo">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="call-web-api">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> call-web-api
             </NavLink>
         </div>
     </nav>
