--- a/frontend/Shared/NavMenu.razor
+++ b/frontend/Shared/NavMenu.razor
@@ -15,18 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="call-web-api">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> call-web-api
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Todo List
             </NavLink>
         </div>
     </nav>
