Refactor frontend to VS solution

--- a/frontend/Pages/Index.razor
+++ b/frontend/Pages/Index.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hello, Cosmos!</h1>
 
-Welcome to your new app.
+Welcome to my test app for containerized micro services.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
