--- a/frontend/_Imports.razor
+++ b/frontend/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using frontend
-@using frontend.Shared
+@using Bos.Todo.Web
+@using Bos.Todo.Web.Shared
+@using Bos.Todo.Web.Models
