--- a/frontend/Pages/Todo.razor
+++ b/frontend/Pages/Todo.razor
@@ -76,7 +76,7 @@ else
 }
 
 @code {
-    private const string ServiceEndpoint = "https://localhost:7159/Item";
+    private const string ServiceEndpoint = "http://localhost:8080/Item";
     private TodoItem[]? todoItems;
     private TodoItem editItem = new();
     private string editRowStyle = "none";
